--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
     <%= render 'layouts/header' %>
       <main>
         <p id="notice"><%= notice %></p>
+        <%= yield %>
       </main>
     <%= render 'layouts/footer' %>
   </body>
 </html>
+
+<!--<= render partial: 'layouts/header', locals: { user: @user } %>-->
