--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,13 @@
+<!--< if @book.errors.any? %>-->
+<!--    <= @book.errors.count %>errors prohibited this obj from being saved:-->
+<!--    <ul>-->
+<!--      < @book.errors.full_messages.each do |message| %>-->
+<!--      <li><= message %></li>-->
+<!--      < end %>-->
+<!--    </ul>-->
+<!--    < end %>-->
+
+
 <div class='container'>
   <div class='row'>
     <div class='col-md-3'>
@@ -17,12 +27,41 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          
+          
+          
+
+          <!--<td><= link_to "#{@book.book_comments.count} コメント", book_path(@book.id) %></td>-->
           <% if current_user == @book.user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-        </tr>
-      </table>
+    
+    <!--コメント機能-->
+        <div>
+          <td>コメント件数：<%= @book.book_comments.count %></td>
+          <% @book.book_comments.each do |book_comment| %>
+          <tr>
+            <td><%= image_tag book_comment.user.get_profile_image, size: "100x100" %></td>
+            <td><%= book_comment.user.name %></td>
+            <td><%= book_comment.comment %></td>
+            
+            <!-- コメント消去 -->
+            <% if current_user == book_comment.user %>
+            <td><%= link_to 'Destroy', book_book_comment_path(@book, book_comment), method: :delete, class: "btn btn-sm btn-danger"%></td>
+            <% end %>
+          </tr>
+          <% end %>
+        </div>
+         </tr>
+        </table>
+         <div>
+          <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5' %>
+          <%= f.submit "送信" %>
+          <% end %>
+        </div>
+        
     </div>
   </div>
 </div>
