--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -36,7 +36,24 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-    
+          
+          <!--いいね機能-->
+          <td>
+          <% if @book.favorited_by?(current_user) %>
+          <p>
+          <%= link_to book_favorite_path(@book), method: :delete do %>
+          ♥<%= @book.favorites.count %> いいね
+          <% end %>
+          </p>
+          <% else %>
+          <p>
+          <%= link_to book_favorite_path(@book), method: :post do %>
+          ♡<%= @book.favorites.count %> いいね
+          <% end %>
+          </p>
+          <% end %>
+          </td>
+
     <!--コメント機能-->
         <div>
           <td>コメント件数：<%= @book.book_comments.count %></td>
