--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,17 +1,30 @@
 <table class='table'>
   <tr><%= image_tag user.get_profile_image, size:'100x100' %></tr>
   <tr>
-	  <th>name</th>
-	  <th><%= user.name %></th>
+    <th>name</th>
+    <th><%= user.name %></th>
   </tr>
   <tr>
-	  <th>introduction</th>
-	  <th><%= user.introduction %></th>
+    <th>introduction</th>
+    <th><%= user.introduction %></th>
+  </tr>
+ 
+  <tr>
+    <th>follows</th>
+    <td><%= user.followings.count %></td>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <td><%= user.followers.count %></td>
   </tr>
 </table>
-　
+
 <div class='row'>
-  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% unless user == current_user %>
+    <% if current_user.following?(user) %>
+      <%= link_to 'フォロー解除', unfollow_path(user_id: user.id), method: :delete, class: "btn btn-outline-danger btn-block" %>
+    <% else %>
+      <%= link_to 'フォローする', follow_path(user_id: user.id), method: :post, class: "btn btn-outline-primary btn-block" %>
+    <% end %>
   <% end %>
 </div>
