--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,9 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td id="favorite_btn_<%= book.id %>">
+         <%= render "favorites/btn", book: book %>
+        </td>
         <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
       </tr>
     <% end %>
