--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -51,13 +51,10 @@
           <% end %>
           </p>
           <% else %>
-          <p>
-          <%= link_to book_favorite_path(@book), method: :post do %>
-          ♡<%= @book.favorites.count %>
-          <% end %>
-          </p>
           <% end %>
           </td>
+          <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+           <td><%= link_to 'Destroy', @book, method: :delete, class: "btn btn-sm btn-danger"%></td>
 
     <!--コメント機能-->
         <div>
