--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,6 @@
       <%= link_to 'グループ一覧', groups_path %>
       </div>
       <%= render 'index',users: @users %>
-    </div>å
+    </div>
   </div>
 </div>
