--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -16,6 +16,7 @@
             <th></th>
             <th>グループ名</th>
             <th>紹介文</th>
+            <th>メンバー</th>
             <th></th>
           </tr>
         </thead>
@@ -27,6 +28,16 @@
               <% if @group.owner_id == current_user.id %>
                 <td>
                   <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %>
+                </td>
+                <td>
+                  <% @group.users.each do |user| %>
+                  <%= user.name %>
+                  <% end %>
+                </td>
+                <td>
+                  <% if @group.owner_id == current_user.id %>
+                  <%= link_to 'Notice an Event', new_group_notice_path(@group), class: "btn btn-primary" %>
+                  <% end %>
                 </td>
               <% end %>
             </tr>
